# mcsee-experiments

./: .gitignore  README.md  reproduce-figures.sh  requirements.txt
e1-rfm-values/: README.md  analyze.py
e2-sledgehammer/: README.md
e2-sledgehammer/analysis/: act2act_distance.py  activation_throughput.py  results_act2act.csv  results_acts-per-trefi.csv
e4-rowpress/: README.md
e4-rowpress/analysis/: process.py  results.csv
e4-rowpress/plotting/: plot.py  (+1 more)
e5-systematic-bit-flipping/: README.md
e5-systematic-bit-flipping/code/: .gitignore  CMakeLists.txt  COMMIT  README.md  runner.sh
e5-systematic-bit-flipping/code/scripts/: analyze_experiment.py
e5-systematic-bit-flipping/code/src/: experiment.cpp  workload.cpp  workload.hpp
e5-systematic-bit-flipping/code/src/memory/: address_generator.cpp  address_generator.hpp  allocation.cpp  allocation.hpp  function.hpp  pagemap.cpp
e6-ptrr-existence/: README.md
e6-ptrr-existence/code/: CMakeLists.txt  COMMIT  README.md  analyze.py  runner.sh  test_acquisition.patch
e6-ptrr-existence/code/src/: config.hpp.in  experiment.cpp  utils.cpp  utils.hpp  workload.cpp  workload.hpp
e6-ptrr-existence/code/src/memory/: allocation.cpp  allocation.hpp  dram_address.cpp  dram_address.hpp  pagemap.hpp
e6-ptrr-existence/code/src/program/: instruction.cpp  instruction.hpp  program.cpp  program.hpp
e6-ptrr-existence/code/src/trigger/: client.cpp  client.hpp  protocol.hpp  trigger_main.cpp  trigger_main.hpp
e7-ptrr-probability/: README.md
e8-ptrr-attack-bypass-time/: README.md  calculate_prob.mlx  calculate_prob.py
(+55 files in other folders)
